Added colors for R503 (new version)
Added all available colors for R503 (RGB version) and possibility to switch off the standby led. All this through dedicated MQTT variables.

--- a/data/settings.html
+++ b/data/settings.html
@@ -97,7 +97,9 @@
 			- "%MQTT_ROOTTOPIC%/lastLogMessage"<br>
 			Subscribed Topics (=read)<br>
 			- "%MQTT_ROOTTOPIC%/ignoreTouchRing"<br>
-			- "%MQTT_ROOTTOPIC%/LedTouchRing"
+			- "%MQTT_ROOTTOPIC%/LedTouchRingActive"<br>
+			- "%MQTT_ROOTTOPIC%/LedTouchRingActiveColor"<br>
+			- "%MQTT_ROOTTOPIC%/LedTouchRingFingerprintDetectedColor"
 		</small>
 		</div>
 	</div>
