--- a/data/settings.html
+++ b/data/settings.html
@@ -96,7 +96,11 @@
 			- "%MQTT_ROOTTOPIC%/matchConfidence"<br>
 			- "%MQTT_ROOTTOPIC%/lastLogMessage"<br>
 			Subscribed Topics (=read)<br>
-			- "%MQTT_ROOTTOPIC%/ignoreTouchRing"
+			- "%MQTT_ROOTTOPIC%/ignoreTouchRing"<br>
+			- "%MQTT_ROOTTOPIC%/LedTouchRingActive"<br>
+			- "%MQTT_ROOTTOPIC%/LedTouchRingActiveColor"<br>
+			- "%MQTT_ROOTTOPIC%/LedTouchRingFingerprintDetectedColor"<br>
+			- "%MQTT_ROOTTOPIC%/LedTouchRingSequence"
 		</small>
 		</div>
 	</div>
