--- a/data/settings.html
+++ b/data/settings.html
@@ -99,7 +99,8 @@
 			- "%MQTT_ROOTTOPIC%/ignoreTouchRing"<br>
 			- "%MQTT_ROOTTOPIC%/LedTouchRingActive"<br>
 			- "%MQTT_ROOTTOPIC%/LedTouchRingActiveColor"<br>
-			- "%MQTT_ROOTTOPIC%/LedTouchRingFingerprintDetectedColor"
+			- "%MQTT_ROOTTOPIC%/LedTouchRingFingerprintDetectedColor"<br>
+			- "%MQTT_ROOTTOPIC%/LedTouchRingSequence"
 		</small>
 		</div>
 	</div>
